[gd_scene load_steps=6 format=2]

[ext_resource path="res://13_rezult/next.png" type="Texture" id=1]
[ext_resource path="res://13_rezult/rez01.png" type="Texture" id=2]
[ext_resource path="res://13_rezult/Pattaya-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://13_rezult/rezult01.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 3 )

[node name="rezult01" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Rez01" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 932.0
margin_top = 625.0
margin_right = 1262.0
margin_bottom = 703.0
texture_normal = ExtResource( 1 )

[node name="Label_animal" type="Label" parent="."]
margin_left = 313.0
margin_top = 409.0
margin_right = 388.0
margin_bottom = 468.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "20%"
__meta__ = {
"_edit_lock_": true
}

[node name="Label_human" type="Label" parent="."]
margin_left = 310.0
margin_top = 645.0
margin_right = 385.0
margin_bottom = 704.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "20%"
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
